<resources>
    <string name="app_name">Memoir</string>

    <string name="journal">My Journal</string>
    <string name="bucket_list">Bucket List</string>
    <string name="profile">My Profile</string>

    <string name="journal_date_label">9 - Wednesday</string>
    <string name="journal_photo_label">Photo Journal</string>
    <string name="journal_edtx_hint">
        How\'s your day? Write something...
    </string>

    <string name="permission_title">Permission Denied</string>
    <string name="permission_message">
        Please allow all permissions required for this app.
        \n\nStorage - Reading photos for showcase in PHOTO JOURNAL and PROFILE section.
    </string>

    <string name="sample_title">Lorem Ipsum</string>
    <string name="sample_category_difficulty">Adventure | Easy</string>
    <string name="sample_body">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Aenean vitae eros eget nulla volutpat rutrum.
        Maecenas laoreet velit elit, pretium dictum nisl ultricies quis.
        Cras ac placerat ligula, sit amet blandit libero.
        Aenean varius odio gravida consequat elementum. Nulla et condimentum sapien.
        Nam egestas neque sed feugiat euismod.
        Mauris euismod vehicula nisl, et mollis nulla interdum ut.
        Mauris sapien ligula, laoreet ac elit sit amet, faucibus volutpat justo.
        Donec luctus nibh in interdum efficitur.
        Donec vitae nulla ut leo malesuada tempus.
        Fusce non felis libero. Nullam ac mi lobortis, pretium ex vitae, tincidunt metus.
        Curabitur semper dolor eros, eu volutpat nibh condimentum id.
        Vivamus ut eros at mi elementum scelerisque.
        Duis id est sit amet leo elementum laoreet eget eu erat.
        Fusce mattis mollis interdum
    </string>

    <string name="title_hint">Add Title</string>
    <string name="category_hint">Category</string>
    <string name="difficulty_hint">Difficulty</string>
    <string name="body_hint">Write details here...</string>

    <string name="filter">Filter</string>

    <string name="done">Done</string>
    <string name="pending">Pending</string>
    <string name="total">Total</string>

    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="adventure">Adventure</string>
    <string name="entertainment">Entertainment</string>
    <string name="personal">Personal</string>
    <string name="travel">Travel</string>

    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="mark_done">Mark as Done</string>

    <string name="name_hint">Display Name Here</string>
    <string name="allow_notify">Allow app notification</string>
    <string name="theme_label">Select theme color</string>

    <string name="count">88</string>
    <string name="react_label">Reactions Count</string>
    <string name="bucket_label">Bucket Count</string>

    <string-array name="category">
        <item>@string/adventure</item>
        <item>@string/entertainment</item>
        <item>@string/personal</item>
        <item>@string/travel</item>
    </string-array>

    <string-array name="difficulty">
        <item>@string/easy</item>
        <item>@string/medium</item>
        <item>@string/hard</item>
    </string-array>

</resources>
