<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/filter"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_line" />

    <Button
        android:id="@+id/filter_pending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@drawable/button_drawable_left"
        android:minHeight="0dp"
        android:padding="5dp"
        android:text="@string/pending"
        android:textAllCaps="false"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintRight_toLeftOf="@+id/vertical_center_50"
        app:layout_constraintTop_toBottomOf="@+id/filter" />

    <Button
        android:id="@+id/filter_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-1dp"
        android:background="@drawable/button_drawable_right"
        android:minHeight="0dp"
        android:padding="5dp"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintLeft_toRightOf="@+id/filter_pending"
        app:layout_constraintTop_toBottomOf="@+id/filter" />

    <Button
        android:id="@+id/filter_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_drawable_left"
        android:minHeight="0dp"
        android:padding="5dp"
        android:text="@string/easy"
        android:textAllCaps="false"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintRight_toLeftOf="@id/filter_medium"
        app:layout_constraintTop_toBottomOf="@+id/filter_pending" />

    <Button
        android:id="@+id/filter_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_drawable"
        android:minHeight="0dp"
        android:padding="5dp"
        android:text="@string/medium"
        android:textAllCaps="false"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_pending" />

    <Button
        android:id="@+id/filter_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_drawable_right"
        android:minHeight="0dp"
        android:padding="5dp"
        android:text="@string/hard"
        android:textAllCaps="false"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintLeft_toRightOf="@+id/filter_medium"
        app:layout_constraintTop_toBottomOf="@+id/filter_pending" />

    <com.sackcentury.shinebuttonlib.ShineButton
        android:id="@+id/filter_adventure"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:src="@android:color/darker_gray"
        app:allow_random_color="true"
        app:big_shine_color="?colorPrimary"
        app:btn_color="@android:color/darker_gray"
        app:btn_fill_color="?colorPrimary"
        app:click_animation_duration="200"
        app:enable_flashing="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/vertical_line_25"
        app:layout_constraintTop_toBottomOf="@+id/filter_medium"
        app:shine_animation_duration="1500"
        app:shine_count="8"
        app:shine_turn_angle="10"
        app:siShape="@raw/adventure"
        app:small_shine_offset_angle="20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adventure"
        android:textColor="?colorPrimary"
        android:textSize="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/filter_adventure"
        app:layout_constraintRight_toRightOf="@id/filter_adventure"
        app:layout_constraintTop_toBottomOf="@id/filter_adventure" />

    <com.sackcentury.shinebuttonlib.ShineButton
        android:id="@+id/filter_entertainment"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:src="@android:color/darker_gray"
        app:allow_random_color="true"
        app:big_shine_color="?colorPrimary"
        app:btn_color="@android:color/darker_gray"
        app:btn_fill_color="?colorPrimary"
        app:click_animation_duration="200"
        app:enable_flashing="false"
        app:layout_constraintLeft_toRightOf="@id/vertical_line_25"
        app:layout_constraintRight_toLeftOf="@+id/vertical_center_50"
        app:layout_constraintTop_toBottomOf="@+id/filter_medium"
        app:shine_animation_duration="1500"
        app:shine_count="8"
        app:shine_turn_angle="10"
        app:siShape="@raw/entertainment"
        app:small_shine_offset_angle="20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entertainment"
        android:textColor="?colorPrimary"
        android:textSize="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/filter_entertainment"
        app:layout_constraintRight_toRightOf="@id/filter_entertainment"
        app:layout_constraintTop_toBottomOf="@id/filter_entertainment" />

    <com.sackcentury.shinebuttonlib.ShineButton
        android:id="@+id/filter_personal"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:src="@android:color/darker_gray"
        app:allow_random_color="true"
        app:big_shine_color="?colorPrimary"
        app:btn_color="@android:color/darker_gray"
        app:btn_fill_color="?colorPrimary"
        app:click_animation_duration="200"
        app:enable_flashing="false"
        app:layout_constraintLeft_toRightOf="@+id/vertical_center_50"
        app:layout_constraintRight_toLeftOf="@+id/vertical_center_75"
        app:layout_constraintTop_toBottomOf="@+id/filter_medium"
        app:shine_animation_duration="1500"
        app:shine_count="8"
        app:shine_turn_angle="10"
        app:siShape="@raw/personal"
        app:small_shine_offset_angle="20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal"
        android:textColor="?colorPrimary"
        android:textSize="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/filter_personal"
        app:layout_constraintRight_toRightOf="@id/filter_personal"
        app:layout_constraintTop_toBottomOf="@id/filter_personal" />

    <com.sackcentury.shinebuttonlib.ShineButton
        android:id="@+id/filter_travel"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:src="@android:color/darker_gray"
        app:allow_random_color="true"
        app:big_shine_color="?colorPrimary"
        app:btn_color="@android:color/darker_gray"
        app:btn_fill_color="?colorPrimary"
        app:click_animation_duration="200"
        app:enable_flashing="false"
        app:layout_constraintLeft_toRightOf="@+id/vertical_center_75"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_medium"
        app:shine_animation_duration="1500"
        app:shine_count="8"
        app:shine_turn_angle="10"
        app:siShape="@raw/travel"
        app:small_shine_offset_angle="20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel"
        android:textColor="?colorPrimary"
        android:textSize="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/filter_travel"
        app:layout_constraintRight_toRightOf="@id/filter_travel"
        app:layout_constraintTop_toBottomOf="@id/filter_travel" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_line_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_center_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_center_75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

</android.support.constraint.ConstraintLayout>