<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/bucket_item_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_photo"
            app:layout_constraintBottom_toTopOf="@+id/guide_line"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bucket_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/title_hint"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_line" />

        <TextView
            android:id="@+id/bucket_item_category_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_category_difficulty"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bucket_item_title" />

        <ImageView
            android:id="@+id/bucket_item_done"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/done_icon"
            app:layout_constraintBottom_toTopOf="@id/bucket_item_title"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/bucket_item_image" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scrollbars="none"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bucket_item_category_difficulty">

            <TextView
                android:id="@+id/bucket_item_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/body_hint"
                android:padding="10dp" />
        </ScrollView>

        <android.support.constraint.Guideline
            android:id="@+id/guide_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>